--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1415,7 +1415,7 @@ a {
     justify-content: center;
     align-items: center;
     z-index: 9999;
-    transition: opacity 0.5s ease;
+    transition: opacity 0.5s ease-out;
 }
 
 .loader.hidden {
